updated file locations

--- a/src/index.html
+++ b/src/index.html
@@ -144,8 +144,8 @@
 				but you gotta give me (<a xmlns:cc="http://creativecommons.org/ns#" href="http://robobilly.com" property="cc:attributionName" rel="cc:attributionURL">Billy Brown</a>) credit somewhere. 
 			</div>
 			<div id="downloads" >
-				<p>Download as a <a href="PixelatedCameras.eps"><abbr title="encapsulated postscript">.eps</abbr></a>, <a href="PixelatedCameras.ai"><abbr title="Adobe Illustrator">.ai</abbr></a> or 
-				<a href="PixelatedCameras.png"><abbr title="Portable Network Graphics">.png</abbr></a> file.</p>
+				<p>Download as a <a href="files/PixelatedCameras.eps"><abbr title="encapsulated postscript">.eps</abbr></a>, <a href="files/PixelatedCameras.ai"><abbr title="Adobe Illustrator">.ai</abbr></a> or 
+				<a href="files/PixelatedCameras.png"><abbr title="Portable Network Graphics">.png</abbr></a> file.</p>
 				<figure>
 					<a href="PixelatedCameras.eps"><img src="img/eps_icon.png" alt=".eps file icon"></a>
 					<a href="PixelatedCameras.ai"><img src="img/ai_icon.png" alt=".ai file icon"></a>
