updated credit url

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>The Camera Collection</title>
 		<meta name="description" content="A collection of camera icons">
-		<meta name="author" content="Willy Dynomite - robobilly.com">
+		<meta name="author" content="Bill Brown - b.illbrown.com">
 		<!-- Big thanks to David DeSandro for Isotope (http://isotope.metafizzy.co/), Ray Larabie for the font Gnoulane (http://typodermicfonts.com/) and Travis Kochel for the font Otari (http://www.tktype.com/). -->
 		<link rel="shortcut icon" href="img/cameraF.ico">
 		<link rel="stylesheet" href="css/main.css">
@@ -141,7 +141,7 @@
 				<!-- these creative commons license tags keep the site from validating...but maybe the W3C hasn't caught up with CC attributes yet -->
 				<p>The <span property="dct:title" rel="dct:type">camera illustrations</span> are under the 
 				<a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>. This means you can do absolutely anything with them 
-				but you gotta give me (<a xmlns:cc="http://creativecommons.org/ns#" href="http://robobilly.com" property="cc:attributionName" rel="cc:attributionURL">Billy Brown</a>) credit somewhere. 
+				but you gotta give me (<a xmlns:cc="http://creativecommons.org/ns#" href="http://b.illbrown.com" property="cc:attributionName" rel="cc:attributionURL">Billy Brown</a>) credit somewhere. 
 			</div>
 			<div id="downloads" >
 				<p>Download as a <a href="files/PixelatedCameras.eps"><abbr title="encapsulated postscript">.eps</abbr></a>, <a href="files/PixelatedCameras.ai"><abbr title="Adobe Illustrator">.ai</abbr></a> or 
@@ -161,7 +161,9 @@
 		</div>	<!-- info -->
 	</div> <!-- cameras -->
 
-		<script src="js/scripts.min.js"></script>
+    <script src="js/jquery-1.4.4.min.js"></script>
+    <script src="js/jquery.isotope.min.js"></script>
+		<script src="js/scripts.js"></script>
      
     <!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet change the UA-XXXXX-X to be your site's ID -->
     <script>
