updated directory structure;

--- a/src/index.html
+++ b/src/index.html
@@ -147,9 +147,9 @@
 				<p>Download as a <a href="files/PixelatedCameras.eps"><abbr title="encapsulated postscript">.eps</abbr></a>, <a href="files/PixelatedCameras.ai"><abbr title="Adobe Illustrator">.ai</abbr></a> or 
 				<a href="files/PixelatedCameras.png"><abbr title="Portable Network Graphics">.png</abbr></a> file.</p>
 				<figure>
-					<a href="PixelatedCameras.eps"><img src="img/eps_icon.png" alt=".eps file icon"></a>
-					<a href="PixelatedCameras.ai"><img src="img/ai_icon.png" alt=".ai file icon"></a>
-					<a href="PixelatedCameras.png"><img src="img/png_icon.png" alt=".png file icon"></a>
+					<a href="files/PixelatedCameras.eps"><img src="img/eps_icon.png" alt=".eps file icon"></a>
+					<a href="files/PixelatedCameras.ai"><img src="img/ai_icon.png" alt=".ai file icon"></a>
+					<a href="files/PixelatedCameras.png"><img src="img/png_icon.png" alt=".png file icon"></a>
 				</figure>
 			</div>
 			<div>
