--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 	
 	<body>
 		<header role="banner">
-				<a href="/camera"><h1><span>The</span> Camera Collection</h1></a>
+				<a href="/cameracollection"><h1><span>The</span> Camera Collection</h1></a>
 				<h2>A collection of 100 pixelated camera illustrations for anybody to download and use in whatever way they see fit.</h2>
 		</header>
 		
